force-app/main/default/objects/Parametros_ORG__c/Parametros_ORG__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Parâmetros gerais da ORG</description>
    <label>Parâmetros ORG</label>
</CustomObject>