force-app/main/default/objects/Parametros_ORG__c/fields/Email_admin_comercial_1__c.field-meta.xml
<CustomField>
    <fullName>Email_admin_comercial_1__c</fullName>
    <description>Campo utilizado na classe Handler_Oportunidade no método verifyApprovalProcess. (KCA-9)</description>
    <label>Email admin comercial 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>