force-app/main/default/objects/Parametros_ORG__c/fields/Email_usuario_pentaho__c.field-meta.xml
<CustomField>
    <fullName>Email_usuario_pentaho__c</fullName>
    <description>Email utilizado pelo usuário do pentaho para integração</description>
    <label>Email do usuário do Pentaho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>