force-app/main/default/objects/Parametros_ORG__c/fields/ID_fila_ordem_servico__c.field-meta.xml
<CustomField>
    <fullName>ID_fila_ordem_servico__c</fullName>
    <label>Id fila Ordem de Serviço</label>
    <length>18</length>
    <type>Text</type>
</CustomField>