force-app/main/default/objects/Parametros_ORG__c/fields/Id_grupo_origem_lead_canal_exclusivo__c.field-meta.xml
<CustomField>
    <fullName>Id_grupo_origem_lead_canal_exclusivo__c</fullName>
    <description>KCA-384</description>
    <label>Id grupo origem lead: canal exclusivo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>