force-app/main/default/objects/Parametros_ORG__c/fields/Id_usuario_pentaho__c.field-meta.xml
<CustomField>
    <fullName>Id_usuario_pentaho__c</fullName>
    <label>Id usuário do pentaho</label>
    <length>18</length>
    <type>Text</type>
</CustomField>